--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,22 @@
 //====================================================================================================
 .header {
-
-	// .header__container
+   position: absolute;
+	width: 100%;
+	top:0;
+	left:0;
+	
+	&__wrapper {
+		position: fixed;
+		width: 100%;
+		left: 0;
+		top: 0;
+		z-index: 50;
+		background-color: #F1F1F1;
+		
+	}
 
 	&__container {
+		
 	}
 
 	// .header__top
@@ -23,7 +36,7 @@
 
 	&__inner {
 		background-color: #fff;
-		min-height: 66px;
+	
 		display: flex;
       align-items: center;
 		justify-content: center;
@@ -52,6 +65,25 @@
 	// .menu__body
 
 	&__body {
+		@media (max-width:$mobile){
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			top: 0;
+			left: -100%;
+			background-color: #ffffff;
+			transition: left 0.3s ease 0s;
+			padding: 40px 15px 30px 15px;
+			font-size: 34px;
+			color: #828282;
+		  
+		 
+		 .menu-open & {
+			 left:0;
+		 
+		 } 
+		}
 	}
 
 	// .menu__list
@@ -59,6 +91,16 @@
 	&__list {
 		display: flex;
 		gap: 22px;
+		@media (max-width:$mobile){
+			display: flex;
+			flex-direction: column;
+         flex-wrap: wrap;
+         gap: 10px;
+        
+         
+
+	 
+}
 	}
 	
 
@@ -71,10 +113,10 @@
 
 	&__link {
 		font-weight: 400;
-
-line-height: 21px;
-letter-spacing: 1px;
-text-transform: uppercase;
+      @include adaptiveValue("font-size", 14, 8);
+      line-height: 21px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
 	}
 
 	// .menu__icon
@@ -82,58 +124,60 @@ text-transform: uppercase;
 	&__icon {
 	}
 }
-.icon-menu {
-}
 
-//====================================================================================================
-
-//Burger
-/*
-.icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
-		position: relative;
-		width: rem(30);
-		height: rem(18);
-		cursor: pointer;
-		z-index: 5;
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 0.3s ease 0s;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: rem(2);
-			background-color: #000;
-		}
-		&::before {
-			top: 0;
-		}
-		&::after {
-			bottom: 0;
-		}
-		span {
-			top: calc(50% - rem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
+	.icon-menu {
+		display: none;
+		@media (max-width: $mobile) {
+			display: block;
+			position: relative;
+			width: rem(30);
+			height: rem(18);
+			cursor: pointer;
+			z-index: 5;
+	      margin-right: 20px;
+			span,
 			&::before,
 			&::after {
+				content: "";
+				transition: all 0.3s ease 0s;
+				right: 0;
+				position: absolute;
+				width: 100%;
+				height: rem(2);
+				background-color: #000;
 			}
 			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
+				top: 0;
 			}
 			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
+				bottom: 0;
+			}
+			span {
+				top: calc(50% - rem(1));
+			}
+			.menu-open & {
+				span {
+					width: 0;
+				}
+				&::before,
+				&::after {
+				}
+				&::before {
+					top: calc(50% - rem(1));
+					transform: rotate(-45deg);
+				}
+				&::after {
+					bottom: calc(50% - rem(1));
+					transform: rotate(45deg);
+				}
 			}
 		}
 	}
-}
-*/
+
+
+//====================================================================================================
+
+
+
+
+
