--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,14 +3,51 @@
 	background: url(@img/main.jpg);
 	background-size: cover;
    background-repeat: no-repeat;
-	background-position:center;
+	background-position: top;
 	height: 100vh;
 	
 	
 }
 
-.main-section p{
-	padding: 100px;
+.main-section__title{
+	text-align: center;
+   font-weight: 400;
+	@include adaptiveValue("font-size", 44, 34);
+   
+   line-height: 51px; 
+	@include adaptiveValue("padding-top", 135, 110);
+   @include adaptiveValue("padding-bottom", 14, 10);
+
+}
+
+.main-section__subtitle {
+
+	font-weight: 400;
+	@include adaptiveValue("font-size", 15, 12);
+
+line-height: 19px;
+text-align: center;
+letter-spacing: 1px;
+color: #000000;
+padding-bottom: 22px;
+}
+
+.buttons{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 12px;
+	& a{
+	   max-width: 201px;
+		white-space: nowrap;
+		padding: 5px 47px;
+		background-color:  #FF4A32;
+		border-radius: 35px;
+		color: white;
+		font-size: 15px;
+      line-height: 22px;
 		
+	}
+
 }
 //====================================================================================================
