add second block

--- a/src/scss/base/swiper.scss
+++ b/src/scss/base/swiper.scss
@@ -1,5 +1,9 @@
-.swiper {
-	overflow: hidden;
+.swiper-container {
+	margin-left: auto;;
+	margin-right: auto;
+	width: 100%;
+	height: 100%;
+	
 }
 .swiper-wrapper {
 	width: 100%;
