--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,10 @@
 //====================================================================================================
 .header {
-   position: absolute;
+
 	width: 100%;
-	top:0;
-	left:0;
+
+	transform: translate(0px, -100%);
+
 	
 	&__wrapper {
 		position: fixed;
@@ -46,6 +47,17 @@
 	// .header__logo
 
 	&__logo {
+
+		transform: translate(-200%, 0px);
+		opacity: 0;
+
+		&._act {
+
+			transform: translate(0px, 0px);
+			transition: all 1s ease 0s;
+			opacity: 1;
+		
+		}
 	}
 
 	// .header__menu
@@ -58,6 +70,14 @@
 
 	&__carts {
 		padding-right: 20px;
+		opacity: 0;
+		&._act {
+
+			
+			transition: all 3.5s ease 1.4s;
+			opacity: 1;
+		
+		}
 	}
 }
 .menu {
@@ -65,10 +85,10 @@
 	// .menu__body
 
 	&__body {
-		@media (max-width:$mobile){
-			position: fixed;
+		@media (max-width:$tablet){
+			position: absolute;
 			width: 100%;
-			height: 100%;
+			height: 100vh;
 			overflow: auto;
 			top: 0;
 			left: -100%;
@@ -91,11 +111,26 @@
 	&__list {
 		display: flex;
 		gap: 22px;
+		transform: translate(200px,0px) ;
+		opacity: 0;
+		color: rgb(0, 255, 85);
+
+
+
+		&._act {
+
+			transform: translate(0px, 0px);
+			transition: all 1s ease 0.6s;
+			opacity: 1;
+		
+		}
+
 		@media (max-width:$mobile){
 			display: flex;
 			flex-direction: column;
          flex-wrap: wrap;
          gap: 10px;
+		
         
          
 
@@ -107,6 +142,11 @@
 	// .menu__item
 
 	&__item {
+		@media (max-width: $tablet) {
+
+		padding-top: 60px;
+		}
+	
 	}
 
 	// .menu__link
@@ -114,10 +154,14 @@
 	&__link {
 		font-weight: 400;
       @include adaptiveValue("font-size", 14, 8);
-      line-height: 21px;
+      line-height: 1px;
       letter-spacing: 1px;
       text-transform: uppercase;
-	}
+		color: #000;
+		@media (max-width: $tablet) {
+		font-size: 40px;
+		font-weight: 700;
+	}}
 
 	// .menu__icon
 
@@ -127,13 +171,14 @@
 
 	.icon-menu {
 		display: none;
-		@media (max-width: $mobile) {
+		@media (max-width: $tablet) {
 			display: block;
 			position: relative;
 			width: rem(30);
 			height: rem(18);
 			cursor: pointer;
 			z-index: 5;
+		
 	      margin-right: 20px;
 			span,
 			&::before,
